force-app/main/default/objects/Rve_Semester_Room_Allotment__c/Rve_Semester_Room_Allotment__c.object-meta.xml
<CustomObject>
    <description>This Object is using for storing Semester Room allotments getting from logisys</description>
    <label>Semester Room Allotment</label>
    <nameField>
        <label>Semester  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Semester Room Allotments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>