force-app/main/default/objects/Rve_Semester_Room_Allotment__c/fields/Rve_Course__c.field-meta.xml
<CustomField>
    <fullName>Rve_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Semester Room Allotments</relationshipLabel>
    <relationshipName>Semester_Room_Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>