force-app/main/default/objects/Rve_Semester_Room_Allotment__c/fields/Rve_Message__c.field-meta.xml
<CustomField>
    <fullName>Rve_Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>