force-app/main/default/objects/Rve_Semester_Room_Allotment__c/fields/Rve_QP_Code__c.field-meta.xml
<CustomField>
    <fullName>Rve_QP_Code__c</fullName>
    <label>QP Code</label>
    <length>125</length>
    <type>Text</type>
</CustomField>