force-app/main/default/objects/Rve_Semester_Room_Allotment__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Semester Room Allotments</relationshipLabel>
    <relationshipName>Semester_Room_Allotments</relationshipName>
    <type>Lookup</type>
</CustomField>